--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.my_portfolio">
+    package="com.example.my_profile">
    <application
-        android:label="my_portfolio"
+        android:label="my_profile"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
